# rust-sut-courses-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/use_cases/: courses.rs
src/config/: config_loader.rs  config_model.rs  stage.rs
src/domain/: course.rs  course_scraper.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/axum_http/: default_routers.rs  http_serve.rs
src/infrastructure/axum_http/routers/: course.rs
src/infrastructure/scraper/: build_search_url.rs  constants.rs  course_details_scraper.rs  course_scraper.rs  courses_data_scraper.rs  courses_table_scraper.rs  extract_exam_info.rs  fetch.rs  mock.rs  mod.rs  parser.rs  selector.rs  utils.rs
src/presentation/dto/: course_response.rs  mod.rs
src/utils/string_utils/: functions.rs  mod.rs  tests.rs
tests/: helpers.rs  scrape_course_data_test.rs  scrape_course_details_test.rs  scrape_course_exams_test.rs  scrape_course_requirements_test.rs
tests/mocks/: 1_mock_html_course_details.txt  2_mock_html_course_details.txt
tests/mocks/html/: 3_mock_html_course_details.txt  4_mock_html_course_details_no_requirements.txt  5_mock_html_course_details_full.txt  mock_html_course_table.txt
tests/mocks/html/exams/: 1_mock_html_course_exams.txt
