[package]
name = "rust-sut-courses-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# scraping
scraper = "0.21.0"
reqwest = { version = "0.12", features = ["json"] }

# web framework
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }

# encode
encoding_rs = "0.8.35"

# error handling
anyhow = "1.0.93"

# serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# logging
tracing = "0.1.40"
tracing-subscriber = "0.3"

async-trait = "0.1.83"
dotenvy = "0.15.7"
